<resources>
    <string name="form_activity_name">Nuevo examen</string>
    <string color="white" name="list_activity">Listado</string>
    <string name="name">Juan Miguel Rivas Velasco</string>
    <string name="appName">Calificaciones</string>
    <string name="ver">1.0</string>
    <string name="language">Kotlin</string>
    <string name="tecnology">Android Studio</string>
    <string name="idioma">Español</string>
    <string name="info_activity_name">Información</string>
    <string-array name="subjects">
        <item>Matemáticas</item>
        <item>Química</item>
        <item>Física</item>
        <item>Biología</item>
        <item>Historia</item>
        <item>Geografía</item>
        <item>Programación</item>
        <item>Ingles</item>
        <item>Artes</item>
        <item>Deportes</item>
    </string-array>
</resources>