<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/white"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
            <TextView
                android:id="@+id/activityNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/info_activity_name"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="680dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Desarrollador:"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/developer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="27sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />
        <TextView
            android:id="@+id/Program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de la Aplicacion:"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/program_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textSize="27sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version:"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:textSize="27sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />
        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lenguaje:"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/language_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="27sp"
            android:textStyle="normal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />
        <TextView
            android:id="@+id/idioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Idioma:"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Idioma_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idioma"
            android:textSize="27sp"
            android:textStyle="normal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2" tools:srcCompat="@drawable/android" app:srcCompat="@drawable/android"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
